# wellness-agent

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml
backend/data/eval-results/: README.md
backend/evals/: .env.example  README.md  package-lock.json  package.json  promptfooconfig.yaml  provider.py  redteam.config.yaml  redteam.yaml
backend/evals/datasets/: hallucination.yaml  refusal.yaml
backend/evals/providers/: models.yaml
backend/prompts/: system.yml
backend/serving/: README.md  benchmark.py
backend/serving/litellm/: config.yaml
backend/serving/vllm/: run-local.sh
backend/src/wellness/: __init__.py  __main__.py  cli.py  config.py  llm.py  logging.py  memory.py  paths.py  prompts.py  tracing.py
backend/src/wellness/agent/: __init__.py  graph.py  state.py  tools.py
backend/src/wellness/api/: __init__.py  ai_stream.py  app.py  schemas.py  sessions.py
backend/src/wellness/api/routes/: chat.py  sessions.py
backend/src/wellness/evals/: __init__.py  interface.py
backend/src/wellness/kb/: __init__.py  index.py  search.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: chat-sidebar.tsx
frontend/components/ai-elements/: prompt-input.tsx
frontend/lib/: sessions.ts
