[project]
name = "wellness"
version = "0.1.0"
description = "Wellness Assistant: an evals-ready LangGraph agent with hybrid KB search and web search."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.60",
    "langgraph-checkpoint-sqlite>=3.1.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "litellm>=1.55.0",
    "langchain-litellm>=0.2.0",
    "langchain-tavily>=0.1.0",
    "rank-bm25>=0.2.2",
    "numpy>=1.26.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "click>=8.1.7",
    "xdg-base-dirs>=6.0.1",
    "sqlite-vec>=0.1.9",
    "langfuse>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
wellness = "wellness.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wellness"]

[dependency-groups]
dev = ["ruff>=0.6.0"]
